--- a/apertium-tools/apertium-html-tools/index.html
+++ b/apertium-tools/apertium-html-tools/index.html
@@ -5,23 +5,23 @@
         <title data-text="title">Apertium | A free/open-source machine translation platform</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="shortcut icon" href="./assets/img/favicon.ico">
-        <link href="//netdna.bootstrapcdn.com/bootswatch/3.0.2/journal/bootstrap.min.css" rel="stylesheet">
-        <link type="text/css" rel="stylesheet" href="./assets/css/style.css">
-        <link type="text/css" rel="stylesheet" href="./assets/css/dropDown.css">
-        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-        <link type="text/css" rel="stylesheet" href="./assets/css/bootstrap.css">
-        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <!-- <script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>  -->
+
         
-        <!-- <script type="text/javascript" src="http://api.apertium.org/JSLibrary.jsp"></script> -->
+        <link type="text/css" rel="stylesheet" href="./assets/css/style.css">
+        <link type="text/css" rel="stylesheet" href="./assets/css/bootstrap.css">
+        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+
+        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
         <!--[if lt IE 9]> <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.js"></script> <![endif]-->
+
+        <!-- <script type="text/javascript" src="http://api.apertium.org/JSLibrary.jsp"></script> -->
         <script type="text/javascript" src="./assets/js/util.js"></script>
         <script type="text/javascript" src="./assets/js/localization.js"></script>
         <script type="text/javascript" src="./assets/js/translator.js"></script>
         <script type="text/javascript" src="./assets/js/analyzer.js"></script>
         <script type="text/javascript" src="./assets/js/generator.js"></script>
         <script type="text/javascript" src="./assets/js/sandbox.js"></script>
-        <script type="text/javascript" src="./assets/js/cld-min.js"></script>
     </head>
     <body>
         <nav class="navbar navbar-default" role="navigation">
@@ -41,10 +41,9 @@
                   <li><a href="#translation" data-mode="translation" data-text="Translation">Translation</a></li>
                   <li><a href="#analyzation" data-mode="analyzation" data-text="Morphological_Analysis">Morphological Analysis</a></li>
                   <li><a href="#generation" data-mode="generation" data-text="Morphological_Generation">Morphological Generation</a></li>
-                  <li><a href="#spellchecker" data-mode="spellchecker" data-text="Spell_Checker">Spell Checker</a></li>
+                  <!-- <li><a href="#spellchecker" data-mode="spellchecker" data-text="Spell_Checker">Spell Checker</a></li> -->
                   <li><a href="#sandbox" data-mode="sandbox" data-text="APY_Sandbox">APY Sandbox</a></li>
                 </ul>
-                </div>
             </div>
         </nav>
         <div class="container">
@@ -53,26 +52,28 @@
                 <h1 style="display: inline-block;" data-text="Translation">Translation</h1>
                 <form class="form-horizontal" role="form" method="none" id="translationForm">
                     <legend data-text="Translation_Help">Choose two languages and translate your text using Apertium's translation platform!</legend>
-                    <!-- <div class="form-group">
+                    <div class="form-group">
                         <div class="col-sm-6">
                             <div class="btn-group">
-                                <button type="button" class="btn btn-default btn-sm">Lang 1</button>
-                                <button type="button" class="btn btn-default btn-sm">Lang 2</button>
-                                <button type="button" class="btn btn-default btn-sm">Lang 3</button>
+                                <button type="button" class="btn btn-default btn-sm srcLang active" id="srcLang1"></button>
+                                <button type="button" class="btn btn-default btn-sm srcLang" id="srcLang2"></button>
+                                <button type="button" class="btn btn-default btn-sm srcLang" id="srcLang3"></button>
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-default btn-sm">
-                                        <span data-text="Detect">Detect language</span>
+                                        <span data-text="Detect_Language">Detect language</span>
                                     </button>
                                     <button type="button" class="btn btn-default dropdown-toggle btn-sm" data-toggle="dropdown">
                                         <span class="caret"></span>
                                         <span class="sr-only">Toggle Dropdown</span>
                                     </button>
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li><a href="#">English</a></li>
-                                        <li><a href="#">Spanish</a></li>
-                                        <li><a href="#">Macedonian</a></li>
-                                        <li class="divider"></li>
-                                        <li><a href="#">Other family</a></li>
+                                    <ul class="dropdown-menu" id="srcLanguages" role="menu">
+                                        <li>
+                                            <div class="row">
+                                                <div class="col-sm-4"></div>
+                                                <div class="col-sm-4"></div>
+                                                <div class="col-sm-4"></div>
+                                            </div>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -80,77 +81,38 @@
                         </div>
                         <div class="col-sm-6">
                             <div class="btn-group">
-                                <button type="button" class="btn btn-default btn-sm">Lang 1</button>
-                                <button type="button" class="btn btn-default btn-sm">Lang 2</button>
+                                <button type="button" class="btn btn-default btn-sm dstLang active" id="dstLang1"></button>
+                                <button type="button" class="btn btn-default btn-sm dstLang" id="dstLang2"></button>
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-default btn-sm">Lang 3</button>
+                                    <button type="button" class="btn btn-default btn-sm dstLang" id="dstLang3"></button>
                                     <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
                                         <span class="caret"></span>
                                         <span class="sr-only">Toggle Dropdown</span>
                                     </button>
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li><a href="#">English</a></li>
-                                        <li class="disabled"><a href="#">Spanish</a></li>
-                                        <li><a href="#">Macedonian</a></li>
-                                        <li class="divider"></li>
-                                        <li><a href="#">Other family</a></li>
+                                    <ul class="dropdown-menu" id="dstLanguages" role="menu">
+                                        <li>
+                                            <div class="row">
+                                                <div class="col-sm-4"></div>
+                                                <div class="col-sm-4"></div>
+                                                <div class="col-sm-4">
+                                                </div>
+                                            </div>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
-                            <button type="button" class="btn btn-primary btn-sm">Translate</button>
+                            <button type="button" id="translate" class="btn btn-primary btn-sm">Translate</button>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-sm-6">
-                            <textarea class="form-control" rows="10"></textarea>
+                            <textarea class="form-control" id="originalText" rows="15"></textarea>
                         </div>
                         <div class="col-sm-6">
-                            <textarea class="form-control" rows="10" disabled></textarea>
+                            <textarea class="form-control" id="translatedText" rows="15" disabled></textarea>
                         </div>
-                    </div> -->
+                    </div>
                 </form> 
-                <div id="dropDown">
-                    <div class="itemSelect" id="selectFrom">
-                        <span><span data-text="From" style="font-weight: bold">From</span>:<br><em></em></span>
-                    </div>
-                    <div id="swapLanguages">
-                        <span data-text="Swap">Swap</span>
-                    </div>
-                    <div class="itemSelect" id="selectTo"> 
-                        <span><span data-text="To" style="font-weight: bold">To</span>:<br><em></em></span>
-                    </div>     
-                    <div id="dropDownSub">
-                        <table>
-                            <tr>
-                                <td>
-                                    <div class="column-group" id="column-group-1"></div>
-                                </td>
-                                <td>
-                                    <div class="column-group" id="column-group-2"></div>
-                                </td>
-                                <td>
-                                    <div class="column-group" id="column-group-3"></div>
-                                </td>
-                                <td>
-                                    <div class="column-group" id="column-group-4"></div>
-                                </td>
-                                <td>
-                                    <div class="column-group" id="column-group-5"></div>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
-                <div id="wrap">
-                    <form id="inputBox" method="POST">
-                        <textarea id="textAreaId"></textarea>
-                        <button type="submit" class="btn btn-primary translate_btn" data-text="Translate">Translate</button>
-                    </form>
-                    
-                    <div id="translationTest">
-                        <span></span>
-                    </div>
-                </div>
             </div>
             <div class="modeContainer" id="analyzationContainer">
                 <h1 data-text="Morphological_Analysis">Morphological Analysis</h1>
@@ -165,7 +127,7 @@
                     <div class="form-group">
                         <label for="morphAnalyzerInput" class="col-sm-2 control-label" data-text="Input_Text">Input Text</label>
                         <div class="col-sm-10">
-                            <textarea class="form-control" rows="3" id="morphAnalyzerInput" name="morphAnalyzerInput" required></textarea>
+                            <textarea class="form-control" rows="5" id="morphAnalyzerInput" name="morphAnalyzerInput" required></textarea>
                         </div>
                     </div>
                     <div class="col-sm-offset-2 col-sm-10">
@@ -188,7 +150,7 @@
                     <div class="form-group">
                         <label for="morphGeneratorInput" class="col-sm-2 control-label" data-text="Input_Text">Input Text</label>
                         <div class="col-sm-10">
-                            <textarea class="form-control" rows="3" id="morphGeneratorInput" name="morphGeneratorInput" required></textarea>
+                            <textarea class="form-control" rows="5" id="morphGeneratorInput" name="morphGeneratorInput" required></textarea>
                         </div>
                     </div>
                     <div class="col-sm-offset-2 col-sm-10">
