--- a/apertium-tools/apertium-html-tools/index.html
+++ b/apertium-tools/apertium-html-tools/index.html
@@ -60,7 +60,7 @@
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-default btn-sm srcLang" id="detect">
                                         <span data-text="Detect_Language" id="detectText">Detect language</span>
-                                        <span id="detectedText">Detect language</span>
+                                        <span id="detectedText"></span>
                                     </button>
                                     <button type="button" class="btn btn-default dropdown-toggle btn-sm" data-toggle="dropdown">
                                         <span class="caret"></span>
@@ -77,7 +77,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <button type="button" class="btn btn-default btn-sm pull-right"><i class="fa fa-exchange"></i></button>
+                            <button type="button" class="btn btn-default btn-sm pull-right" id="swap"><i class="fa fa-exchange"></i></button>
                         </div>
                         <div class="col-sm-6">
                             <div class="btn-group">
