--- a/apertium-tools/apertium-html-tools/index.html
+++ b/apertium-tools/apertium-html-tools/index.html
@@ -94,14 +94,13 @@
                                             <div class="row">
                                                 <div class="col-sm-4"></div>
                                                 <div class="col-sm-4"></div>
-                                                <div class="col-sm-4">
-                                                </div>
+                                                <div class="col-sm-4"></div>
                                             </div>
                                         </li>
                                     </ul>
                                 </div>
                             </div>
-                            <button type="button" id="translate" class="btn btn-primary btn-sm">Translate</button>
+                            <button type="button" id="translate" class="btn btn-primary btn-sm" data-text="Translate">Translate</button>
                         </div>
                     </div>
                     <div class="form-group">
